syntax = "proto3"; //指定proto使用proto3语法，不指定默认是使用proto2

message BasePackage{
	int32 proto_code = 1;//协议码
	int32 unity_session_id=2;//unity端的sessionID.
	bytes data = 10;//数据
}


message RegistReq{
	string user_name =1;//用户名
	string phone_num=2;//手机号
	string password = 3;//密码；
}

//登录
message LoginReq{
	string user_name=1;//用户名
	string password= 2;//密码
}

//获取服务器列表
message GetServerListReq{
	int32 server_id=1;//
}

//登录游戏服务器
message LoginGameServerReq{
	int32 account_id = 1;//
	int32 game_server_id=2;//
}

//创建角色请求数据
message CreateRoleReq{
	int32 account_id = 1;//
	int32 game_server_id=2;//所属的服务器
	string nickname =3;//昵称
	int32 job_id=4;//职业
}